# quanttrader

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  publish.yml
docs/: backtest.html  genindex.html  index.html  index.rst  installation.html  livetrading.html  objects.inv  performance.html  position.html  py-modindex.html  risk.html  search.html  searchindex.js  trading_engine.html
docs/_sources/: backtest.md.txt  brokerage.rst.txt  data.rst.txt  index.rst.txt  introduction.md.txt  performance.rst.txt  position.rst.txt  risk.rst.txt  strategy.rst.txt  trading_engine.rst.txt
docs/source/: conf.py  index.rst  modules.rst
examples/: BENCH.csv  TEST.csv  buy_and_hold_strategy.py  config_live.yaml  download_historical_data_from_ib.py  download_ib_contract_info.py  instrument_meta.yaml  live_engine.py  moving_average_cross_strategy.py  order_per_interval_strategy.py  prepare_trading_session.py
examples/strategy/: active_buy_sell_strength_strategy.py  double_moving_average_cross_strategy.py  dual_thrust.csv  dual_thrust_strategy.py  dual_time_frame_strategy.py  moving_average_cross_strategy.py  order_per_interval_strategy.py
quanttrader/: __init__.py  backtest_engine.py  backtest_gym_engine.py  portfolio_env.py  trading_env.py
quanttrader/account/: __init__.py  account_event.py  account_manager.py
quanttrader/brokerage/: __init__.py  backtest_brokerage.py  brokerage_base.py  ib_brokerage.py
quanttrader/data/: __init__.py  backtest_data_feed.py  bar_event.py  data_board.py  data_feed_base.py  live_data_feed.py  tick_event.py
quanttrading2/: __init__.py  backtest_engine.py  backtest_gym_engine.py  backtest_optimization_engine.py  config_live.yaml  curves.py  live_engine.py
sphinx/: conf.py  event.rst  gui.rst  index.rst  installation.md  instrument.md  introduction.md  livetrading.md
tests/: __init__.py  conftest.py  test_curves.py  test_strats.py
(+152 files in other folders)
